fix icon vertical-alignment

--- a/static/css/screen.css
+++ b/static/css/screen.css
@@ -1590,7 +1590,7 @@ body > div {
 .bybulk-open a:link, .bybulk-open a:visited {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
   opacity: 0.5;
-  background-image: url('../images/ui/item_all_closed.png?1331918974');
+  background-image: url('../images/ui/item_all_closed.png?1331920261');
   background-repeat: no-repeat;
   -webkit-border-radius: 0.296em;
   -moz-border-radius: 0.296em;
@@ -1612,7 +1612,7 @@ body > div {
 .bybulk-open a.open:link, .bybulk-open a.open:visited {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
-  background-image: url('../images/ui/item_all_open.png?1331919021');
+  background-image: url('../images/ui/item_all_open.png?1331920261');
 }
 
 .listnav {
@@ -1712,7 +1712,7 @@ body > div {
   opacity: 0.296;
   margin-right: 0.188em;
   display: inline-block;
-  vertical-align: baseline;
+  vertical-align: text-bottom;
   background: none;
 }
 .action:focus, .actionbutton:focus, .action-clone:focus, .action-delete:focus, .action-remove:focus, .action-include:focus, .action-exclude:focus, .actionlink:focus, .edit-link:focus, .create-child-link:focus, .controls .select-env-link:focus, .action:hover, .actionbutton:hover, .action-clone:hover, .action-delete:hover, .action-remove:hover, .action-include:hover, .action-exclude:hover, .actionlink:hover, .edit-link:hover, .create-child-link:hover, .controls .select-env-link:hover, .action:active, .actionbutton:active, .action-clone:active, .action-delete:active, .action-remove:active, .action-include:active, .action-exclude:active, .actionlink:active, .edit-link:active, .create-child-link:active, .controls .select-env-link:active {
@@ -1936,7 +1936,7 @@ body > div {
 .itembody .item-summary {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=50);
   opacity: 0.5;
-  background-image: url('../images/ui/item_closed.png?1331918450');
+  background-image: url('../images/ui/item_closed.png?1331920261');
   background-repeat: no-repeat;
   -webkit-border-radius: 0.296em;
   -moz-border-radius: 0.296em;
@@ -1985,7 +1985,7 @@ body > div {
 .itembody.open > .summary {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100);
   opacity: 1;
-  background-image: url('../images/ui/item_open.png?1331918428');
+  background-image: url('../images/ui/item_open.png?1331920261');
   background-repeat: no-repeat;
   -webkit-border-radius: 0.296em;
   -moz-border-radius: 0.296em;
